# mandelbrot-polyglot

./: .gitignore  CLAUDE-JP.md  CLAUDE.md  README.md
devlog/: README.md
haskell/: .gitignore  package.yaml  stack.yaml
haskell/app/: Main.hs
haskell/src/: Mandelbrot.hs
haskell/test/: Spec.hs
python/: .gitignore  README.md  pyproject.toml
python/src/mandelbrot_py/: main.py  mandelbrot.py
python/tests/: test_mandelbrot.py
rust/: Cargo.toml
rust/src/: main.rs  mandelbrot.rs
rust/tests/: mandelbrot_test.rs
