[project]
name = "mandelbrot-py"
version = "0.1.0"
description = "Mandelbrot set renderer in Python"
authors = [
    { name = "pyonkichi499", email = "hrs499944@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
mandelbrot = "mandelbrot_py.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mandelbrot_py"]
